# scikit_example

./: CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: conda.yml  wheels.yml
conda.recipe/: meta.yaml
src/: main.cpp
src/macs_io_python2/: __init__.py
tests/: test_basic.py
